@@ -12,6 +12,7 @@ Version : 4.12.6 #XG1
 - Added UOP Packer autofill feature that automatically populates textboxes based on file selection and file type when the checkbox is enabled.
 - Added AnimationEdit Lists all IDs in a text file. 
 - Added a new label to the Items toolstrip to display decimals, making it more user-friendly than before.
+- Added Items - toggle for rhombus function via button.
 
 Version : 4.12.5 #XG1
 - AminEdit added new features, Body Human display will be expanded, and Mounted.
